Fully functional code that implements mert, clap and qwen with emopia and deam datasets

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ NUM_LEVEL=10
 SAMPLE_RATIO=0.2
 RANDOM_STATE=42
 
-DATA_DIR=/content/drive/MyDrive/Colab Notebooks/audio_fx/data
-MODEL_DIR=/content/drive/MyDrive/Colab Notebooks/audio_fx/models/
-EMOPIA_DIR=/content/emopia/
-DEAM_DIR=/content/deam/
+DATA_DIR=data/
+MODEL_DIR=models/
+EMOPIA_DIR=emopia/
+DEAM_DIR=deam/
+OUTPUT_DIR=outputs/
